<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="shortLocale" tools:ignore="MissingTranslation">en</string>
    <string name="LOAD" tools:ignore="MissingTranslation">LOAD</string>
    <string name="load" tools:ignore="MissingTranslation">Load</string>
    <string name="DELETE" tools:ignore="MissingTranslation">DELETE</string>
    <string name="ALL" tools:ignore="MissingTranslation">ALL</string>
    <string name="VOLUME" tools:ignore="MissingTranslation">VOLUME</string>
    <string name="SAMPLE" tools:ignore="MissingTranslation">SAMPLE</string>
    <string name="PITCH" tools:ignore="MissingTranslation">PITCH</string>
    <string name="LOOP" tools:ignore="MissingTranslation">LOOP</string>
    <string name="ON_RELEASE" tools:ignore="MissingTranslation">ON RELEASE:</string>
    <string name="HOLD" tools:ignore="MissingTranslation">HOLD</string>
    <string name="STOP" tools:ignore="MissingTranslation">STOP</string>
    <string name="midi" tools:ignore="MissingTranslation">Midi</string>
    <string name="set" tools:ignore="MissingTranslation">Set</string>
    <string name="feedback" tools:ignore="MissingTranslation">Feedback</string>
    <string name="send" tools:ignore="MissingTranslation">Send</string>
    <string name="support_drumcloud" tools:ignore="MissingTranslation">Support DrumCloud</string>
    <string name="Tutorial" tools:ignore="MissingTranslation">Tutorial</string>
    <string name="showTutorialMessage" tools:ignore="MissingTranslation">Do you want to start the DrumCloud help tutorial?\n\nIf you experience problems during the playback of the tutorial please use the "Close" button.</string>
    <string name="thank_you" tools:ignore="MissingTranslation">Thank you</string>
    <string name="feedback_message" tools:ignore="MissingTranslation">Love it? Hate it? Would you like to suggest a new feature or report a bug? We would love to hear from you:</string>
    <string name="feedback_comments" tools:ignore="MissingTranslation">Your comments</string>
    <string name="feedback_question" tools:ignore="MissingTranslation">question</string>
    <string name="feedback_idea" tools:ignore="MissingTranslation">idea</string>
    <string name="feedback_bug" tools:ignore="MissingTranslation">bug</string> 
    <string name="inOutOptions" tools:ignore="MissingTranslation">In/Out&#8230;</string>   
    <string name="developer_message" tools:ignore="MissingTranslation">Message from the Developer</string>
    <string name="audioFrequencyToast" tools:ignore="MissingTranslation">Using audio frequency of:</string>
    <string name="select_audio_frequency" tools:ignore="MissingTranslation">Select audio frequency/quality:</string>
    <string name="change_frequency" tools:ignore="MissingTranslation">Audio Quality</string>
    <string name="sureToExitTitle" tools:ignore="MissingTranslation">Really exit?</string>
    <string name="sureToExitMessage" tools:ignore="MissingTranslation">Are you sure you want to exit?</string>
    <string name="midi_setup" tools:ignore="MissingTranslation">Setup</string>
    <string name="midi_test" tools:ignore="MissingTranslation">Send test note</string>
    <string name="midi_info_text" tools:ignore="MissingTranslation">Network MIDI for Android™\n\nSend midi messages to this device to test midi connection.</string>
    <string name="midi_client_download" tools:ignore="MissingTranslation">Download the PC/Mac Midi client from here:\nhttp://codefixia.com/drumcloud/nmj.jar</string>
    <string name="midi_open" tools:ignore="MissingTranslation">Open File</string>
    <string name="midi_share" tools:ignore="MissingTranslation">Send by Mail</string>
    <string name="midi_select_file" tools:ignore="MissingTranslation">Select Midi file:</string>
    <string name="midi_mail_subject" tools:ignore="MissingTranslation">DrumCloud Composition</string>
    <string name="file_save_text" tools:ignore="MissingTranslation">Your file has been saved:</string>    
    <string name="export_midi" tools:ignore="MissingTranslation">Export</string>
    <string name="import_midi" tools:ignore="MissingTranslation">Import</string>    
    <string name="toggle_mode" tools:ignore="MissingTranslation">Toggle Mode</string>
    <string name="delete_all" tools:ignore="MissingTranslation">Delete All</string>
    <string name="donate" tools:ignore="MissingTranslation">Donate</string>
    <string name="about" tools:ignore="MissingTranslation">About</string> 
    <string name="donations__button_close" tools:ignore="MissingTranslation">Close</string>
    <string name="donations__flattr" tools:ignore="MissingTranslation">Flattr</string>
    <string name="donations__description" tools:ignore="MissingTranslation">Do you find this application useful?\nSupport it\'s development by sending a donation to the developer!</string>
    <string name="donations__flattr_description" tools:ignore="MissingTranslation">Flattr takes 10 % as a monthly fee!</string>
    <string name="donations__google_android_market" tools:ignore="MissingTranslation">Google Play Store</string>
    <string name="donations__google_android_market_not_supported_title">In-App Donations not supported</string>
    <string name="donations__google_android_market_not_supported" tools:ignore="MissingTranslation">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
    <string name="donations__google_android_market_description" tools:ignore="MissingTranslation">Google takes 30 % off every donation!</string>
    <string name="donations__google_android_market_donate_button" tools:ignore="MissingTranslation">Donate!</string>
    <string name="donations__google_android_market_text">How much?</string>      
    <string name="donations__paypal">PayPal</string>
    <string name="donations__paypal_description" tools:ignore="MissingTranslation">You can choose how much you want to donate after clicking the button!</string>
    <string name="donations__thanks_dialog_title" tools:ignore="MissingTranslation">Thanks!</string>
    <string name="donations__thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
    <string name="donations__alert_dialog_title" tools:ignore="MissingTranslation">Error occurred</string>
    <string name="donations__alert_dialog_no_browser" tools:ignore="MissingTranslation">No browser was found to open a website!</string>
    <string name="live_mode" tools:ignore="MissingTranslation">Live Mode</string>
    <string name="sequencer_mode" tools:ignore="MissingTranslation">Sequencer Mode</string>
    <string name="pause" tools:ignore="MissingTranslation">Pause</string>
    <string name="play" tools:ignore="MissingTranslation">Play</string>
    <string name="close" tools:ignore="MissingTranslation">Close</string>
    <string name="live_menu_item" tools:ignore="MissingTranslation">LIVE</string>
    <string name="seq_menu_item" tools:ignore="MissingTranslation">SEQ</string>
    <string name="auto_menu_item" tools:ignore="MissingTranslation">AUTO</string>
    <string name="aboutDialogText" tools:ignore="MissingTranslation">
<u>DEVELOPMENT AND DESIGN</u>\n
Constantino Fernández Traba\n
\n        
<u>CODEFIXIA</u>\n
Constantino Fernández Traba\n
Emilio José Jiménez Jiménez\n
Ignacio José Ortega Ruiz\n
Roberto Díez Mirantes\n
Rubén González González\n
\n
<u>ICON</u>\n
Diana Hidalgo Marín\n
\n
<u>TRANSLATION</u>\n
Tania Martínez Bermúdez\n
\n
<u>CONTACT</u>\n
www.codefixia.com\n
tino@codefixia.com\n
\n
<u>DRUMCLOUD</u>\n
<font size="8">
Copyright © @2013 Codefixia\n
All rights reserved\n
</font>
</string>
<string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
<string name="load_samples" tools:ignore="MissingTranslation">Load Samples</string>
<string name="help" tools:ignore="MissingTranslation">Help</string>
<string name="next" tools:ignore="MissingTranslation">Next</string>
<string name="helpDialogTitle1" tools:ignore="MissingTranslation">
Live Mode Tutorial 1/7
</string>
<string name="helpDialogText1" tools:ignore="MissingTranslation">
The timebar shows the 4 tempo/beats divisions splitted on 8 diferents grid ticks.
Pressing the tap buttons below will add different tick colors on the timebar that represents the launch time of the tap button associated sample.
</string>
<string name="helpDialogTitle2" tools:ignore="MissingTranslation">
Live Mode Tutorial 2/7
</string>
<string name="helpDialogText2" tools:ignore="MissingTranslation">
The BPM horizontal slider setup the current beat duration. Sliding to the left or right you can go from the minimun 80 BPM 
 to the maximum 160 BPM.
 </string>
<string name="helpDialogTitle3" tools:ignore="MissingTranslation">
Live Mode Tutorial 3/7
</string> 
<string name="helpDialogText3" tools:ignore="MissingTranslation">
The Load Button allow you to load files stored on your phone (SD card or internal storage) and from Google Drive.
When you press on it all the tap buttons starts to blink. Select the one you want to configure and a dialog will be showed up.
If you press the top \"Local Files\" option you can navigate from your local files/directories list.
</string>
<string name="helpDialogTitle4" tools:ignore="MissingTranslation">
Live Mode Tutorial 4/7
</string>
<string name="helpDialogText4" tools:ignore="MissingTranslation">
When you select one .wav/.aiff file that file it\'s asocciated with the previous selected tap button and a new dialog allows you to upload that sample to Google Drive by 
previously selecting the sample category more related with your sound file. If you select the \"Google Drive\" option you can download 
packs or individual samples availables on the cloud or shared by other users.
</string>
<string name="helpDialogTitle5" tools:ignore="MissingTranslation">
Live Mode Tutorial 5/7
</string>
<string name="helpDialogText5" tools:ignore="MissingTranslation">
The delete button allows you to remove some samples from the timebar. You need to press it and slide down to select the type of the samples you want to remove. 
To delete all the samples select the \"All\" button.
</string>
<string name="helpDialogTitle6" tools:ignore="MissingTranslation">
Live Mode Tutorial 6/7
</string>
<string name="helpDialogText6" tools:ignore="MissingTranslation">
Using the different sliders you can control some of the global audio parameters that affects all the samples. 
You can see the altered parameter at the bottom of each slider.</string>
<string name="helpDialogTitle7" tools:ignore="MissingTranslation">
Live Mode Tutorial 7/7
</string>
<string name="helpDialogText7" tools:ignore="MissingTranslation">
Finally but not less important, the pad buttons that allows you to trigger all the samples categorized by colors.\n
Using the pads on paused mode let\'s you enjoy the different pressure levels of the pads.
</string>
<string name="shareAppSubject" tools:ignore="MissingTranslation">
DrumCloud - Mobile Audio Production on the Cloud
</string>
<string name="shareAppMessage" tools:ignore="MissingTranslation">
DrumCloud, your mobile audio production tool with unlimited samples storage.\n\n Try it now:\n %1$s \n\nFrom Codefixia: http://codefixia.com
</string>
<string name="playMarketWebLink" tools:ignore="MissingTranslation">
https://play.google.com/store/apps/details?id=com.codefixia.drumcloud
</string>
<string name="codefixiaWebLink" tools:ignore="MissingTranslation">
http://www.codefixia.com/app/drumcloud/
</string>
<string name="slidemeMarketWebLink" tools:ignore="MissingTranslation">
http://slideme.org/application/drumcloud
</string>
<string name="amazonMarketWebLink" tools:ignore="MissingTranslation">
http://www.amazon.com/gp/mas/dl/android?p=com.codefixia.drumcloud&amp;ref=mas_pm_drumcloud
</string>
<string name="shareAppDialogTitle" tools:ignore="MissingTranslation">
Share with your friends
</string>
<string name="share" tools:ignore="MissingTranslation">Share</string>
<string name="moreOptions" tools:ignore="MissingTranslation">More Options&#8230;</string>
</resources>
