<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dip"
    >


<TextView android:id="@+id/midiPostSaveText" android:gravity="center" android:layout_margin="10dip" android:layout_width="180dip" android:layout_height="wrap_content" android:minLines="10" android:layout_gravity="center"></TextView>
<Button android:id="@+id/midiOpenFileButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/midi_open" android:layout_gravity="center"></Button>
<Button android:id="@+id/midiShareFileButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/midi_share" android:layout_gravity="center"></Button>
<Button android:id="@+id/midiCancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/close" android:layout_gravity="center"></Button>
</LinearLayout>
