<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TextView android:id="@+id/midiSelectFile" android:gravity="center" android:layout_margin="10dip" android:layout_width="180dip" android:layout_height="wrap_content" android:minLines="2" android:layout_gravity="center" android:text="@string/midi_select_file"></TextView>
<Spinner android:id="@+id/Spinner01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Spinner>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip" >
<Button android:id="@+id/midiLoadButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/load" android:layout_gravity="center"></Button>
<Button android:id="@+id/midiCancelButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/close" android:layout_gravity="center"></Button>
</LinearLayout>
</LinearLayout>
